@@ -1,3 +1,6 @@
+* Mon Feb 03 2003 <gerbier@users.sourceforge.net> 1.4.1-1
+- add warning flag (-w/--warning) 
+
 * Fri Jan 17 2003 <gerbier@users.sourceforge.net> 1.4.0-1
 - public release of 1.3 dev branch
 
